--- a/src/scss/components/_chat.scss
+++ b/src/scss/components/_chat.scss
@@ -1,6 +1,12 @@
 .chat {
     background: transparent;
 
+    &__messages {
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+    }
+
     &__actions {
         display: flex;
     }
