--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -1,6 +1,9 @@
 @import "./header";
+@import "./header-search";
 @import "./chat";
 @import "./friends-list";
+@import "./friend-preview";
 @import "./online-friends-list";
 @import "./categories-list";
 @import "./message";
+@import "./add-friend";
