--- a/src/scss/components/_online-friends-list.scss
+++ b/src/scss/components/_online-friends-list.scss
@@ -1,4 +1,5 @@
 .online-friends-list {
-    background: yellow;
+    background: #D6DFE6;
     grid-area: online-friends-list;
+    height: 100%;
 }
