--- a/src/scss/base/_layout.scss
+++ b/src/scss/base/_layout.scss
@@ -1,10 +1,17 @@
+* {
+    box-sizing: border-box;
+}
+
 .wrapper {
     display: grid;
+    font-family: 'proxima', sans-serif;
+    font-weight: 300;
     grid-template-areas: 
         "aside-left header-top header-top"
         "aside-left center aside-right";
     grid-template-columns: 27.7% 1fr 27.7%;
     grid-template-rows: $header-height 1fr;
+
     height: 100vh;
     // margin: 0 auto;
     max-width: 1440px;
