--- a/src/scss/components/_chat.scss
+++ b/src/scss/components/_chat.scss
@@ -1,10 +1,15 @@
 .chat {
     background: transparent;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-between;
+    padding: 30px;
 
     &__messages {
-        padding: 20px;
         display: flex;
         flex-direction: column;
+        padding: 20px;
     }
 
     &__actions {
@@ -13,39 +18,39 @@
 
     &__inputs {
         flex-grow: 1;
+        margin-right: 20px;
         position: relative;
     }
 
     &__input-text {
-        font-size: 20px;
         background: #D5E0E6;
         border: none;
         border-radius: 5px;
+        font-size: 20px;
         height: 70px;
-        padding: 0;
         line-height: 70px;
+        padding: 0;
         width: 100%;
     }
     
     &__input-file {
-        display: flex;
         align-items: center;
-        justify-content: center;
+        cursor: pointer;
+        display: flex;
         height: 100%;
+        justify-content: center;
         position: absolute;
         right: 0;
         top: 0;
         width: 60px;
-        height: 100%;
-        cursor: pointer;
 
         input {
-            position: absolute;
-            width: 0;
             opacity: 0;
             outline: 0;
             pointer-events: none;
+            position: absolute;
             user-select: none;
+            width: 0;
         }
     }
 
