--- a/src/scss/components/_friend-preview.scss
+++ b/src/scss/components/_friend-preview.scss
@@ -1,9 +1,17 @@
 .friend-preview {
     align-items: flex-start;
     background-color: #F1F5F8;
+    border-bottom: 1px solid #D6DFE6;
+    border-right: 1px solid #D6DFE6;
+    cursor: pointer;
     display: flex;
+    font-size: 16px;
     max-height: 120px;
-    padding: 35px 40px;
+    padding: 37px 40px;
+
+    &:hover, &--active {
+        background-color: #fff;
+    }
 
     &__img {
         border-radius: 4px;
@@ -17,11 +25,26 @@
     }
 
     &__content {
-        padding: 0 20px;
+        max-width: 58%;
+        padding: 2px 25px 0;
+    }
+
+    &__name {
+        font-weight: 400;
+        padding-bottom: 15px;
+        
+    }
+
+    &__message {
+        color: #aaaaaa;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
     }
 
     &__time {
-        flex: 0 0 50px; 
+        flex: 1 0 50px; 
+        padding-top: 2px;
     }
 
 }
