--- a/src/pug/components/friends-list.pug
+++ b/src/pug/components/friends-list.pug
@@ -14,18 +14,18 @@
 
 .friends-list
 
-    .friend-preview
-        .friend-preview__img
-            img(src="https://fakeimg.pl/55x55/")
-        .friend-preview__content
-            .friend-preview__name Will Smith
-            .friend-preview__message Lorem ipsum dolor sit amet consectetur.
-        .friend-preview__time 2 p.m.
+    //- .friend-preview
+    //-     .friend-preview__img
+    //-         img(src="https://fakeimg.pl/55x55/")
+    //-     .friend-preview__content
+    //-         .friend-preview__name Will Smith
+    //-         .friend-preview__message Lorem ipsum dolor sit amet consectetur.
+    //-     .friend-preview__time 2 p.m.
 
-    .friend-preview
-        .friend-preview__img
-            img(src="https://fakeimg.pl/55x55/")
-        .friend-preview__content
-            .friend-preview__name Will Smith
-            .friend-preview__message Lorem ipsum dolor sit amet consectetur.
-        .friend-preview__time 2 p.m.
+    //- .friend-preview
+    //-     .friend-preview__img
+    //-         img(src="https://fakeimg.pl/55x55/")
+    //-     .friend-preview__content
+    //-         .friend-preview__name Will Smith
+    //-         .friend-preview__message Lorem ipsum dolor sit amet consectetur.
+    //-     .friend-preview__time 2 p.m.
