--- a/src/pug/components/chat.pug
+++ b/src/pug/components/chat.pug
@@ -1,30 +1,30 @@
 .chat 
     .chat__messages
 
-        .message
-            .message__img
-                img(src="https://fakeimg.pl/50x50/")
-            .message__content
-                .message__text Sample text
-                .message__date 2p.m.
-        .message.message--owner
-            .message__img
-                img(src="https://fakeimg.pl/50x50/")
-            .message__content
-                .message__text Sample text
-                .message__date 2p.m.
-        .message
-            .message__img 
-                img(src="https://fakeimg.pl/50x50/")
-            .message__content
-                .message__text Sample text
-                .message__date 2p.m.
-        .message.message--owner
-            .message__img 
-                img(src="https://fakeimg.pl/50x50/")
-            .message__content
-                .message__text Sample text
-                .message__date 2p.m.
+        //- .message
+        //-     .message__img
+        //-         img(src="https://fakeimg.pl/50x50/")
+        //-     .message__content
+        //-         .message__text Sample text
+        //-         .message__date 2p.m.
+        //- .message.message--owner
+        //-     .message__img
+        //-         img(src="https://fakeimg.pl/50x50/")
+        //-     .message__content
+        //-         .message__text Sample text
+        //-         .message__date 2p.m.
+        //- .message
+        //-     .message__img 
+        //-         img(src="https://fakeimg.pl/50x50/")
+        //-     .message__content
+        //-         .message__text Sample text
+        //-         .message__date 2p.m.
+        //- .message.message--owner
+        //-     .message__img 
+        //-         img(src="https://fakeimg.pl/50x50/")
+        //-     .message__content
+        //-         .message__text Sample text
+        //-         .message__date 2p.m.
 
     .chat__actions
         .chat__inputs
