--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -4,6 +4,7 @@ head
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     title Document
     link(rel='stylesheet' href='./styles.css')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js')
     script(src='./js/scripts.js')
 body
     .wrapper
